Improve hugo-theme

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -3,7 +3,7 @@
 - id: previous
   translation: "Previous"
 - id: backtotop
-  translation: "back to top"
+  translation: "Back to Top"
 - id: readmore
   translation: "Read more"
 - id: byauthor
